Finiti i test. C'è da scrivere la relazione.